--- a/MvcTestInGit/WebApplication2/Views/Home/Index.cshtml
+++ b/MvcTestInGit/WebApplication2/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ 
-    Layout = "~/Views/Shares/_layout.cshtml";
+    Layout = "~/Views/Shared/_layout.cshtml";
 }
 @{
     ViewBag.Title = "Home Page";
