--- a/MvcTestInGit/WebApplication2/Views/Movies/Create.cshtml
+++ b/MvcTestInGit/WebApplication2/Views/Movies/Create.cshtml
@@ -36,7 +36,7 @@
                 </div>
             </div>
     
-            <div class="form-group">1223
+            <div class="form-group">
                 @Html.LabelFor(model => model.Genre, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Genre, new { htmlAttributes = new { @class = "form-control" } })
@@ -50,9 +50,7 @@
                     @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
                 </div>
-            </d
-                
-                iv>
+            </div>
     
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
