--- a/MvcTestInGit/WebApplication2/Views/Movies/Create.cshtml
+++ b/MvcTestInGit/WebApplication2/Views/Movies/Create.cshtml
@@ -51,6 +51,23 @@
                     @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
                 </div>
             </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.HumanNumber, htmlAttributes: new { @class="control-label col-md-2"})
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.HumanNumber, new { htmlAttributes =new {@class="form-control"}})
+                    @Html.ValidationMessageFor(model => model.HumanNumber, "", new { @class="text-danger"})
+
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Director.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Director.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Director.Name, "", new { @class = "text-danger" })
+
+                </div>
+            </div>
+
     
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
