--- a/MvcTestInGit/WebApplication2/Views/Movies2/Index.cshtml
+++ b/MvcTestInGit/WebApplication2/Views/Movies2/Index.cshtml
@@ -20,12 +20,45 @@
             <th>
                 @Html.DisplayNameFor(model=>model.Name)
             </th>
-
+            <th>
+                @Html.DisplayNameFor(model => model.ID)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ReleaseDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Genre)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Price)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.HumanNumber)
+            </th>
         </tr>
-        foreach(var item in Model)
+        @foreach (var item in Model)
+        {<tr>
+             <th>
+                 @Html.DisplayFor(modelItem => item.Name)
+             </th>
         <th>
-            @Html.DisplayFor(ModelItem=>item.Name)
+            @Html.DisplayFor(modelItem=>item.ID)
         </th>
+             <th>
+                 @Html.DisplayFor(modelItem => item.ReleaseDate)
+             </th>
+             <th>
+                 @Html.DisplayFor(modelItem => item.Genre)
+             </th>
+             <th>
+                 @Html.DisplayFor(modelItem => item.Price)
+             </th>
+             <th>
+                 @Html.DisplayFor(modelItem => item.HumanNumber)
+             </th>
+        </tr>
+       
+        }
     </table>
 </body>
 </html>
