--- a/MvcTestInGit/WebApplication2/Views/Director/Index.cshtml
+++ b/MvcTestInGit/WebApplication2/Views/Director/Index.cshtml
@@ -22,7 +22,7 @@
            </tr>
             <tr>
                 <th>
-                    @Html.Disp
+                    @Html.DisplayFor()
                 </th>
             </tr>
         </table>
