--- a/MvcTestInGit/WebApplication2/Views/Movies/Index.cshtml
+++ b/MvcTestInGit/WebApplication2/Views/Movies/Index.cshtml
@@ -17,7 +17,7 @@
         @using (Html.BeginForm())
         {
         <p>@Html.TextBox("SearchInfo") <input type="submit" value="filter" />
-         @Html.DropDownList("Genre", "Comedy")
+         @*@Html.DropDownList("Genre", "Comedy")*@
          <input type="submit" value="filter"/>
        </p>
         
